--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ TWILIO_SID = 'AC45086cb846d0f94d07669ea87701b756'
 AUTH_TOKEN = 'f93782db61ca62403abd73e4589fb2d4'
 
 SHOPIFY_API = ''
+
+PORT = 3000
