--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TWILIO_SID = 'AC45086cb846d0f94d07669ea87701b756'
-AUTH_TOKEN = 'f93782db61ca62403abd73e4589fb2d4'
+TWILIO_ACCOUNT_SID = 'AC45086cb846d0f94d07669ea87701b756'
+TWILIO_AUTH_TOKEN = 'f93782db61ca62403abd73e4589fb2d4'
 
 SHOPIFY_API = ''
 
