First try with Digits

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-TWILIO_ACCOUNT_SID = 'AC45086cb846d0f94d07669ea87701b756'
-TWILIO_AUTH_TOKEN = 'f93782db61ca62403abd73e4589fb2d4'
-
-SHOPIFY_API = ''
+TWILIO_ACCOUNT_SID = 'AC543fc2f1fd0ee20ea8908462645ea542'
+TWILIO_AUTH_TOKEN = '05601ff197d4aa165e37dff5b69e56c9'
 
 PORT = 3000
+
+CUSTOMER_PHONE = '+573102950378'
+SUPPORT_PHONE = '+13343100649'
